# fensterkalk

./: .gitignore  CMakeLists.txt
cMake/: FindCGAL.cmake  FindGMP.cmake
docs/: Doxyfile.in
docs/UML/: schema.uxf
gui/: CMakeLists.txt  constrGui.cpp  constrGui.h  edge.h  graphwidget.cpp  graphwidget.h  gui.cpp  main.cpp  mainWindow.cpp  mainWindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h
gui/1/: CMakeLists.txt  mainwindow.ui
lib/: CMakeLists.txt  beam.cpp  beam.h  constr.cpp  constr.h  frame.cpp  frame.h  loadjson.cpp  loadjson.h  node.cpp  node.h  order.cpp  order.h  test.cpp
lib/public/: beam.h  constr.h  frame.h  loadjson.h  node.h  order.h
lib/src/: beam.cpp  constr.cpp  frame.cpp  loadjson.cpp  node.cpp  order.cpp
scripts/: clang-format-all.sh
